--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>hola, gaby :)</h1>
+  <p>holu1</p>
   <script type="module" src="main.js"></script>
 </body>
 </html>
