--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-  <link href='https://fonts.googleapis.com/css?family=League Spartan' rel='stylesheet'>
+  <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@800&family=Montserrat:wght@700&display=swap" rel="stylesheet">
   <link href="style.css" rel="stylesheet" type="text/css" />
   <title>Purr Love</title>
 </head>
