--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <title>Purr Love</title>
 </head>
 <body>
-  <section id="container"></section>
+  <section class= "container" id="container"></section>
 
   <script type="module" src="firebaseConfig.js"></script>
   <script type="module" src="main.js"></script>
