--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,11 @@
 </head>
 <body>
   
-  <section id="container"></section>
+  <section id="container">
+    <p></p>
+    <p></p>
+    <p></p>
+  </section>
   
   
   
