--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
 <body>
 
   <section class= "container" id="container"></section>
+  <p>hola mundo</p>
   <script type="module" src="main.js"></script>
 </body>
 </html>
